syntax = "proto3";

package pb;

option go_package ="./internal/user/pb";
import "google/protobuf/any.proto";
service AuthService{
    rpc Register(RegisterRequest)returns (RegisterResponse){};
    rpc Login(LoginRequest)returns (LoginResponse){};
    rpc CheckSystem(EmptyRequest) returns (SystemResponse){};

}
message EmptyRequest {}

message SystemResponse{

    string message=1;
    int64 status =2;
}

message RegisterRequest{

    string username=1;
    string email=2;
    string password=3;
    string phonenumber=4;
    
}
message RegisterResponse{

map<string, google.protobuf.Any> result=1;
    
}
message LoginRequest{

    string email=1;
    string password=2;
}
message LoginResponse{

 string token =1;
 int64 status=2;
 string error=3;
    
}

